// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChemicalFormula handles empty formula string 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#FFF",
        "fontWeight": "700",
      },
      {
        "fontSize": 23,
      },
    ]
  }
/>
`;

exports[`ChemicalFormula matches snapshot 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#FFF",
        "fontWeight": "700",
      },
      {
        "fontSize": 23,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
  >
    H
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "textAlignVertical": "bottom",
        },
        {
          "fontSize": 17,
          "lineHeight": 26,
        },
      ]
    }
  >
    2
  </Text>
  <Text
    allowFontScaling={false}
  >
    O
  </Text>
</Text>
`;
